steer sim adjustment, auto
fake it till u make it